branches/0.3/objects/ProjectAssignee__c.object
<CustomObject>
    <description>ProjectAssignee</description>
    <fields>
        <fullName>Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Notify</description>
        <label>Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PercentDedicated__c</fullName>
        <description>PercentDedicated</description>
        <label>PercentDedicated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProjectIssue__c</fullName>
        <description>ProjectIssue</description>
        <label>ProjectIssue</label>
        <referenceTo>ProjectIssue__c</referenceTo>
        <relationshipName>ProjectsAssignees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectRisk__c</fullName>
        <description>ProjectRisk</description>
        <label>ProjectRisk</label>
        <referenceTo>ProjectRisk__c</referenceTo>
        <relationshipName>ProjectsAssignees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <description>ProjectTask</description>
        <label>ProjectTask</label>
        <referenceTo>ProjectTask__c</referenceTo>
        <relationshipName>ProjectsAssignees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project</description>
        <label>Project</label>
        <referenceTo>Project2__c</referenceTo>
        <relationshipName>ProjectsAssignees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Project Assignee</label>
    <nameField>
        <label>Assignee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Assignee</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>